projects/extauth/plugins/ldap/hack/vs-auth.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: echo
  namespace: gloo-system
spec:
  displayName: echo
  virtualHost:
    domains:
    - '*'
    name: gloo-system.echo
    virtualHostPlugins:
      extensions:
        configs:
          extauth:
            plugin_auth:
              plugins:
              - config:
                  ServerUrl: "ldap.default.svc.cluster.local:389"
                  UserDnTemplate: "uid=%s,ou=people,dc=solo,dc=io"
                  AllowedGroups:
                  - "cn=managers,ou=groups,dc=solo,dc=io"
                name: Ldap
                plugin_file_name: Ldap.so
                exported_symbol_name: Plugin
    routes:
    - matcher:
        prefix: /echo
      routeAction:
        single:
          upstream:
            name: default-http-echo-5678
            namespace: gloo-system
